objects/DMAPP__DM_Milestone_Question__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__DealmakerID__c</fullName>
        <externalId>true</externalId>
        <label>DealmakerID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DMAPP__Help__c</fullName>
        <label>Help</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__Max_Possible_Score__c</fullName>
        <label>Maximum Possible Score</label>
        <summarizedField>DMAPP__DM_Milestone_Question_Option__c.DMAPP__Score__c</summarizedField>
        <summaryForeignKey>DMAPP__DM_Milestone_Question_Option__c.DMAPP__Milestone_Question__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMAPP__Milestone_Section__c</fullName>
        <label>Milestone Section</label>
        <referenceTo>DMAPP__DM_Milestone_Section__c</referenceTo>
        <relationshipLabel>Milestone Questions</relationshipLabel>
        <relationshipName>Milestone_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Question__c</fullName>
        <label>Milestone Question</label>
        <length>1024</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DMAPP__SortOrder__c</fullName>
        <label>SortOrder</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Milestone Question</label>
    <listViews>
        <fullName>DMAPP__All</fullName>
        <columns>DMAPP__SortOrder__c</columns>
        <columns>DMAPP__Milestone_Section__c</columns>
        <columns>DMAPP__Question__c</columns>
        <columns>NAME</columns>
        <columns>DMAPP__Help__c</columns>
        <columns>DMAPP__Max_Possible_Score__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Milestone Question Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Milestone Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>